--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,14 +30,14 @@
 
 .main:after {
     content: "";
-    background-image: url("/assets/images/grid.svg");
+    background-image: url("/assets/images/background.png");
     z-index: 1;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
-    opacity: 0.4;
-    filter: invert(1);
+    /* opacity: 0.4;
+    filter: invert(1); */
 }
 
 .gradient {
@@ -87,20 +87,16 @@
     @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
 }
 
-.orange_gradient {
-    @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
-}
-
 .green_gradient {
     @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
 }
 
 .blue_gradient {
-    @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
+    @apply bg-gradient-to-r from-blue-800 to-blue-100 bg-clip-text text-transparent;
 }
 
 .desc {
-    @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+    @apply mt-5 text-lg text-black sm:text-xl max-w-2xl;
 }
 
 .search_input {
